# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
brain_games/: brain_calc.py  cli.py  game.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gsd.py  brain_prime.py  brain_progression.py  communication_with_users.py  game.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
