[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "brain_games" },]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:brain_even"
brain-calc = "brain_games.scripts.brain_games:brain_calc"
brain-gsd = "brain_games.scripts.brain_games:brain_gsd"
brain-progression = "brain_games.scripts.brain_games:brain_progression"
brain-prime = "brain_games.scripts.brain_games:brain_prime"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
